tests/ui/compile-fail/pin_data/selfref_dropck.stderr
error: field `ptr` borrows `b`, but drops later
 --> tests/ui/compile-fail/pin_data/selfref_dropck.rs:6:11
  |
6 |     ptr: &'b u32,
  |           ^^

error[E0597]: `a` does not live long enough
  --> tests/ui/compile-fail/pin_data/selfref_dropck.rs:21:5
   |
18 | struct UnsoundImplied {
   |                     -
   |                     |
   |                     `a` dropped here while still borrowed
   |                     borrow might be used here, when `_guard` is dropped and runs the `Drop` code for type `pin_init::__internal::LifetimeGuard`
...
21 |     a: String,
   |     ^
   |     |
   |     borrowed value does not live long enough
   |     binding `a` declared here
   |
   = note: values in a scope are dropped in the opposite order they are defined
